ANT-TASK: Solve class loading issues

--- a/src/it/example/build.xml
+++ b/src/it/example/build.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="Example Ant Build with Sonar" default="rebuild" xmlns:sonar="antlib:org.sonar.ant">
 
+  <property name="sonar.skipDesign" value="true" />
+
   <property name="src.dir" location="./src" />
   <property name="result.dir" location="./target" />
   <property name="result.classes.dir" location="${result.dir}/classes" />
-
-  <!-- Import Sonar Ant tasks -->
-  <taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml">
-    <!-- TODO remove hardcoded version -->
-    <classpath path="../../../target/sonar-ant-task-0.1-SNAPSHOT.jar" />
-  </taskdef>
 
   <target name="clean">
     <delete dir="${result.dir}" />
@@ -17,11 +13,35 @@
 
   <target name="compile">
     <mkdir dir="${result.classes.dir}" />
-    <javac srcdir="${src.dir}" destdir="${result.classes.dir}" debug="true" />
+    <javac srcdir="${src.dir}" destdir="${result.classes.dir}" debug="true" includeAntRuntime="false"/>
   </target>
 
   <target name="sonar">
-    <sonar:sonar>
+    <!-- Create isolated ClassLoader -->
+    <taskdef name="isolateSonarClassloader" classname="org.sonar.ant.IsolateClassloader">
+      <!-- TODO remove hardcoded version -->
+      <classpath path="../../../target/sonar-ant-task-0.1-SNAPSHOT.jar" />
+    </taskdef>
+
+    <isolateSonarClassloader />
+
+    <!-- Import Sonar Ant tasks -->
+    <taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml" loaderRef="sonar" />
+
+    <!-- Execute Sonar -->
+    <sonar:sonar serverUrl="http://localhost:9000">
+      <project key="org.example:example" version="0.1-SNAPSHOT">
+        <sources>
+          <path location="${src.dir}"/>
+        </sources>
+        <classes>
+          <path location="${result.classes.dir}"/>
+        </classes>
+      </project>
+      <!-- TODO
+      <property name="sonar.dynamicAnalysis" value="false" />
+      <property name="sonar.projectDate" value="2010-10-15" />
+      -->
     </sonar:sonar>
   </target>
 
