--- a/pom.xml
+++ b/pom.xml
@@ -49,36 +49,35 @@
   </ciManagement>
   
   <properties>
+    <sonar.version>2.6-SNAPSHOT</sonar.version>
   </properties>
 
   <dependencies>
+    <!-- Would be embedded in final JAR -->
+    <dependency>
+      <groupId>org.codehaus.sonar</groupId>
+      <artifactId>sonar-batch-bootstrapper</artifactId>
+      <version>${sonar.version}</version>
+    </dependency>
+    <!-- Would be provided by environment  -->
     <dependency>
       <groupId>org.apache.ant</groupId>
       <artifactId>ant</artifactId>
       <version>1.7.0</version>
       <scope>provided</scope>
     </dependency>
+    <!-- Would be available after bootstrapping -->
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>0.9.15</version>
+      <scope>provided</scope>
     </dependency>
-    <!-- TODO we shouldn't directly depend on batch -->
     <dependency>
       <groupId>org.codehaus.sonar</groupId>
       <artifactId>sonar-batch</artifactId>
-      <version>2.6-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-project</artifactId>
-      <version>2.0.7</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.codehaus.plexus</groupId>
-          <artifactId>plexus-container-default</artifactId>
-        </exclusion>
-      </exclusions>
+      <version>${sonar.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
   
