ANT-TASK: Add support for project binaries (jars, classes) and corresponding integration test

--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,7 @@
                 <configuration>
                   <background>true</background>
                   <clean>true</clean>
-                  <!-- <configBackup>${basedir}/src/it/sonar-backup.xml</configBackup> -->
+                  <configBackup>${basedir}/src/it/sonar-backup.xml</configBackup>
                 </configuration>
                 <goals>
                   <goal>start-war</goal>
