ANT-TASK: Simplify configuration

--- a/src/it/build.xml
+++ b/src/it/build.xml
@@ -4,7 +4,7 @@
   <target name="analyze-ant-projects">
     <execant dir="clover" />
     <execant dir="cobertura" />
-    <execant dir="many-source-dirs" />
+    <execant dir="custom-layout" />
     <execant dir="classpath" />
   </target>
 
