--- a/src/it/clover/build.xml
+++ b/src/it/clover/build.xml
@@ -114,11 +114,7 @@
 
     <!-- Execute Sonar -->
     <sonar:sonar workDir="${build.dir}/sonar-boot">
-      <project>
-        <property key="sonar.projectKey" value="org.sonar.ant.tests:clover" />
-        <property key="sonar.projectVersion" value="0.1-SNAPSHOT" />
-        <property key="project.build.directory" value="${build.dir}" />
-
+      <project key="org.sonar.ant.tests:clover" version="0.1-SNAPSHOT">
         <property key="sonar.dynamicAnalysis" value="reuseReports" />
         <property key="sonar.core.codeCoveragePlugin" value="clover" />
         <property key="sonar.clover.reportPath" value="${reports.coverage.xml.dir}/coverage.xml" />
