--- a/src/it/cobertura/build.xml
+++ b/src/it/cobertura/build.xml
@@ -155,11 +155,7 @@
 
     <!-- Execute Sonar -->
     <sonar:sonar workDir="${build.dir}/sonar-boot">
-      <project>
-        <property key="sonar.projectKey" value="org.sonar.ant.tests:cobertura" />
-        <property key="sonar.projectVersion" value="0.1-SNAPSHOT" />
-        <property key="project.build.directory" value="${build.dir}" />
-
+      <project key="org.sonar.ant.tests:cobertura" version="0.1-SNAPSHOT">
         <property key="sonar.dynamicAnalysis" value="reuseReports" />
         <property key="sonar.core.codeCoveragePlugin" value="cobertura" />
         <property key="sonar.cobertura.reportPath" value="${reports.coverage.xml.dir}/coverage.xml" />
