--- a/src/it/cobertura/build.xml
+++ b/src/it/cobertura/build.xml
@@ -151,21 +151,17 @@
       <classpath path="../../../target/sonar-ant-task-0.1-SNAPSHOT.jar" />
     </taskdef>
 
-    <mkdir dir="${build.dir}/sonar-boot" />
-
     <!-- Execute Sonar -->
-    <sonar:sonar workDir="${build.dir}/sonar-boot">
-      <project key="org.sonar.ant.tests:cobertura" version="0.1-SNAPSHOT">
-        <property key="sonar.dynamicAnalysis" value="reuseReports" />
-        <property key="sonar.core.codeCoveragePlugin" value="cobertura" />
-        <property key="sonar.cobertura.reportPath" value="${reports.coverage.xml.dir}/coverage.xml" />
+    <sonar:sonar workDir="${build.dir}/sonar-work" key="org.sonar.ant.tests:cobertura" version="0.1-SNAPSHOT">
+      <property key="sonar.dynamicAnalysis" value="reuseReports" />
+      <property key="sonar.core.codeCoveragePlugin" value="cobertura" />
+      <property key="sonar.cobertura.reportPath" value="${reports.coverage.xml.dir}/coverage.xml" />
 
-        <property key="sonar.surefire.reportsPath" value="${reports.junit.xml.dir}" />
+      <property key="sonar.surefire.reportsPath" value="${reports.junit.xml.dir}" />
 
-        <sources>
-          <path location="${src.dir}"/>
-        </sources>
-      </project>
+      <sources>
+        <path location="${src.dir}"/>
+      </sources>
     </sonar:sonar>
   </target>
 
