--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,27 @@
   <issueManagement>
   </issueManagement>
 
+  <licenses>
+    <license>
+      <name>GNU LGPL 3</name>
+      <url>http://www.gnu.org/licenses/lgpl.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <id>godin</id>
+      <name>Evgeny Mandrikov</name>
+      <timezone>+3</timezone>
+    </developer>
+    <developer>
+      <id>simon.brandhof</id>
+      <name>Simon Brandhof</name>
+      <timezone>+1</timezone>
+    </developer>
+  </developers>
+  
   <properties>
     <sonar.version>2.6-SNAPSHOT</sonar.version>
     <ant.version>1.7.0</ant.version>
