--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
   </issueManagement>
 
   <properties>
-    <sonar.version>2.8-SNAPSHOT</sonar.version>
+    <sonar.version>2.8-RC2</sonar.version>
     <ant.version>1.7.0</ant.version>
   </properties>
 
