--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
 
   <properties>
     <sonar.version>2.8</sonar.version>
+    <sonar-runner.version>1.5-SNAPSHOT</sonar-runner.version>
     <ant.version>1.7.0</ant.version>
   </properties>
 
@@ -65,6 +66,11 @@
       <groupId>org.codehaus.sonar</groupId>
       <artifactId>sonar-batch-bootstrapper</artifactId>
       <version>${sonar.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.sonar-plugins</groupId>
+      <artifactId>sonar-runner</artifactId>
+      <version>${sonar-runner.version}</version>
     </dependency>
     <!-- Would be provided by environment -->
     <dependency>
@@ -125,47 +131,4 @@
     </plugins>
   </build>
   
-  <profiles>
-    <profile>
-      <!-- TODO Godin: bump it up to parent -->
-      <id>m2e</id>
-      <activation>
-        <!-- This profile is active only when used from Eclipse m2e and is 
-          used only to store settings. -->
-        <property>
-          <name>m2e.version</name>
-        </property>
-      </activation>
-      <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.eclipse.m2e</groupId>
-              <artifactId>lifecycle-mapping</artifactId>
-              <version>1.0.0</version>
-              <configuration>
-                <lifecycleMappingMetadata>
-                  <pluginExecutions>
-                    <pluginExecution>
-                      <pluginExecutionFilter>
-                        <groupId>com.mycila.maven-license-plugin</groupId>
-                        <artifactId>maven-license-plugin</artifactId>
-                        <versionRange>[1.9.0,)</versionRange>
-                        <goals>
-                          <goal>check</goal>
-                        </goals>
-                      </pluginExecutionFilter>
-                      <action>
-                        <ignore />
-                      </action>
-                    </pluginExecution>
-                  </pluginExecutions>
-                </lifecycleMappingMetadata>
-              </configuration>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
-    </profile>
-  </profiles>
 </project>
