--- a/pom.xml
+++ b/pom.xml
@@ -63,11 +63,6 @@
   <dependencies>
     <!-- Would be embedded in final JAR -->
     <dependency>
-      <groupId>org.codehaus.sonar</groupId>
-      <artifactId>sonar-batch-bootstrapper</artifactId>
-      <version>${sonar.version}</version>
-    </dependency>
-    <dependency>
       <groupId>org.codehaus.sonar-plugins</groupId>
       <artifactId>sonar-runner</artifactId>
       <version>${sonar-runner.version}</version>
@@ -84,6 +79,12 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>0.9.15</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.sonar</groupId>
+      <artifactId>sonar-batch-bootstrapper</artifactId>
+      <version>${sonar.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
