--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
   <artifactId>sonar-ant-task</artifactId>
-  <version>1.5-SNAPSHOT</version>
+  <version>2.0</version>
 
   <name>Sonar Ant Task</name>
   <description />
@@ -65,7 +65,7 @@
     <dependency>
       <groupId>org.codehaus.sonar-plugins</groupId>
       <artifactId>sonar-runner</artifactId>
-      <version>${sonar-runner.version}</version>
+      <version>2.0</version>
     </dependency>
     <!-- Would be provided by environment -->
     <dependency>
