--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
   <artifactId>sonar-ant-task</artifactId>
-  <version>2.1-SNAPSHOT</version>
+  <version>2.1</version>
 
   <name>Sonar Ant Task</name>
   <description />
