Trigger analysis fro Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,18 @@ script:
   - ./travis.sh
 
 env:
-  matrix:
-    - RUN_ITS=false
-    - RUN_ITS=true SQ_VERSION=LTS
-    - RUN_ITS=true SQ_VERSION=DEV
+  - TARGET=CI
+  - TARGET=IT SQ_VERSION=LTS
+  - TARGET=IT SQ_VERSION=DEV
 
 matrix:
   fast_finish: true
 
 cache:
   directories:
-    - '$HOME/.m2/repository'
+    - $HOME/.m2/repository
+    # analysis and integration tests
+    - $HOME/.sonar
 
 notifications:
   email: false
