Update parent pom, groupId, artifactId and package

--- a/its/projects/java-version/build.xml
+++ b/its/projects/java-version/build.xml
@@ -36,7 +36,7 @@
   <target name="sonar">
     <!-- Import Sonar Ant tasks -->
     <taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml">
-      <classpath path="../../../target/sonar-ant-task.jar" />
+      <classpath path="../../../target/sonarqube-ant-task.jar" />
     </taskdef>
 
     <!-- Execute Sonar -->
