--- a/its/projects/groovy/build.xml
+++ b/its/projects/groovy/build.xml
@@ -47,7 +47,7 @@
   <target name="sonar" depends="compile">
     <!-- Import Sonar Ant tasks -->
     <taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml">
-      <classpath path="../../../target/sonar-ant-task.jar" />
+      <classpath path="../../../target/sonarqube-ant-task.jar" />
     </taskdef>
 
     <!-- Execute Sonar -->
