--- a/its/projects/jacoco-modules/build.xml
+++ b/its/projects/jacoco-modules/build.xml
@@ -65,7 +65,7 @@
   <target name="sonar" depends="test">
     <!-- Import Sonar Ant tasks -->
     <taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml">
-      <classpath path="../../../target/sonar-ant-task.jar" />
+      <classpath path="../../../target/sonarqube-ant-task.jar" />
     </taskdef>
 
     <!-- Execute Sonar -->
