--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.codehaus.sonar-plugins</groupId>
+    <groupId>org.sonarsource.parent</groupId>
     <artifactId>parent</artifactId>
-    <version>19</version>
+    <version>26</version>
+    <relativePath/>
   </parent>
 
-  <artifactId>sonar-ant-task</artifactId>
+  <groupId>org.sonarsource.scanner.ant</groupId>
+  <artifactId>sonarqube-ant-task</artifactId>
   <version>2.4-SNAPSHOT</version>
 
-  <name>SonarQube Ant Task</name>
-  <description />
+  <name>SonarQube Scanner for Ant</name>
+  <description>This is an Ant task allowing to start SonarQube analysis</description>
   <url>http://docs.sonarqube.org/display/SONAR/Analyzing+with+SonarQube+Ant+Task</url>
   <inceptionYear>2011</inceptionYear>
   <organization>
@@ -56,7 +58,7 @@
   </scm>
   <issueManagement>
     <system>JIRA</system>
-    <url>http://jira.codehaus.org/browse/SONARPLUGINS/component/14635</url>
+    <url>https://jira.sonarsource.com/projects/ANTTASK</url>
   </issueManagement>
 
   <properties>
