--- a/pom.xml
+++ b/pom.xml
@@ -68,9 +68,9 @@
   <dependencies>
     <!-- Would be embedded in final JAR -->
     <dependency>
-      <groupId>org.codehaus.sonar.runner</groupId>
+      <groupId>org.sonarsource.sonar-runner</groupId>
       <artifactId>sonar-runner-api</artifactId>
-      <version>2.4</version>
+      <version>2.5</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.findbugs</groupId>
@@ -132,6 +132,15 @@
                   <includes>
                     <include>javax/annotation/ParametersAreNonnullByDefault.class</include>
                   </includes>
+                </filter>
+                <!-- Remove signatures from SQ Runner API -->
+                <filter>
+                  <artifact>org.sonarsource.sonar-runner:sonar-runner-api</artifact>
+                  <excludes>
+                    <exclude>META-INF/*.SF</exclude>
+                    <exclude>META-INF/*.DSA</exclude>
+                    <exclude>META-INF/*.RSA</exclude>
+                  </excludes>
                 </filter>
               </filters>
             </configuration>
