--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <groupId>org.sonarsource.parent</groupId>
     <artifactId>parent</artifactId>
     <version>26</version>
-    <relativePath/>
+    <relativePath />
   </parent>
 
   <groupId>org.sonarsource.scanner.ant</groupId>
   <artifactId>sonarqube-ant-task</artifactId>
-  <version>2.4-SNAPSHOT</version>
+  <version>2.4</version>
 
   <name>SonarQube Scanner for Ant</name>
   <description>This is an Ant task allowing to start SonarQube analysis</description>
@@ -54,7 +54,7 @@
     <connection>scm:git:git@github.com:SonarSource/sonar-ant-task.git</connection>
     <developerConnection>scm:git:git@github.com:SonarSource/sonar-ant-task.git</developerConnection>
     <url>https://github.com/SonarSource/sonar-ant-task</url>
-    <tag>HEAD</tag>
+    <tag>2.4</tag>
   </scm>
   <issueManagement>
     <system>JIRA</system>
