--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,6 @@ script:
 
 env:
   - TARGET=CI
-  - TARGET=IT SQ_VERSION=LTS
-  - TARGET=IT SQ_VERSION=DEV
 
 matrix:
   fast_finish: true
@@ -24,3 +22,5 @@ cache:
 
 notifications:
   email: false
+  webhooks:
+    - secure: "2R/xoUrUKWfvITG1BQzLhkWFCL5VzFzc/wdDhQypzk+f6hEwuXDUbwo4+xkyVSPJZSLW4tC6WlqlzrjtRACTp9yIO8KSRMMUFwurot5P4xhNUbxGJLiQK7MG4hPa+QCmfcHDm28jmfec1ci2gq0tl49iUpuuUUo86Q+37uGGqP0=" 
