--- a/its/pom.xml
+++ b/its/pom.xml
@@ -4,15 +4,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.sonarsource.parent</groupId>
-    <artifactId>parent</artifactId>
-    <version>23</version>
-    <relativePath />
+    <groupId>org.sonarsource.scanner.ant</groupId>
+    <artifactId>ant</artifactId>
+    <version>2.5-SNAPSHOT</version>
   </parent>
 
-  <groupId>com.sonarsource.it</groupId>
-  <artifactId>it-ant</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>its</artifactId>
   <name>SonarSource :: IT :: Ant task</name>
   <inceptionYear>2009</inceptionYear>
 
@@ -35,5 +32,49 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>qa</id>
+      <activation>
+        <property>
+          <name>env.SONARSOURCE_QA</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.10</version>
+            <executions>
+              <execution>
+                <id>copy-plugin</id>
+                <phase>generate-test-resources</phase>
+                <goals>
+                  <goal>copy</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>${project.groupId}</groupId>
+                      <artifactId>sonarqube-ant-task</artifactId>
+                      <version>${project.version}</version>
+                      <overWrite>true</overWrite>
+                      <destFileName>sonarqube-ant-task.jar</destFileName>
+                    </artifactItem>
+                  </artifactItems>
+                  <outputDirectory>../sonarqube-ant-task/target</outputDirectory>
+                  <overWriteReleases>true</overWriteReleases>
+                  <overWriteSnapshots>true</overWriteSnapshots>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
 </project>
