--- a/sonarqube-ant-task/pom.xml
+++ b/sonarqube-ant-task/pom.xml
@@ -10,7 +10,7 @@
   
   <name>SonarQube Scanner for Ant</name>
   <description>This is an Ant task allowing to start SonarQube analysis</description>
-  <url>http://docs.sonarqube.org/display/SONAR/Analyzing+with+SonarQube+Ant+Task</url>
+  <url>http://redirect.sonarsource.com/doc/ant-task.html</url>
   <inceptionYear>2011</inceptionYear>
   
   <properties>
@@ -20,9 +20,9 @@
   <dependencies>
     <!-- Would be embedded in final JAR -->
     <dependency>
-      <groupId>org.sonarsource.sonar-runner</groupId>
-      <artifactId>sonar-runner-api</artifactId>
-      <version>2.5</version>
+      <groupId>org.sonarsource.scanner.api</groupId>
+      <artifactId>sonar-scanner-api</artifactId>
+      <version>2.6</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.findbugs</groupId>
