--- a/sonarqube-ant-task/pom.xml
+++ b/sonarqube-ant-task/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.sonarsource.scanner.ant</groupId>
     <artifactId>ant</artifactId>
-    <version>2.5-SNAPSHOT</version>
+    <version>2.4.1</version>
   </parent>
 
   <artifactId>sonarqube-ant-task</artifactId>
