--- a/its/pom.xml
+++ b/its/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>org.sonarsource.orchestrator</groupId>
       <artifactId>sonar-orchestrator</artifactId>
-      <version>3.10.1</version>
+      <version>3.13-build592</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
