--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
   <name>SonarQube Scanner for Ant</name>
   <description>This is an Ant task allowing to start SonarQube analysis</description>
-  <url>http://docs.sonarqube.org/display/SONAR/Analyzing+with+SonarQube+Ant+Task</url>
+  <url>http://redirect.sonarsource.com/doc/ant-task.html</url>
   <inceptionYear>2011</inceptionYear>
   <organization>
     <name>SonarSource</name>
@@ -56,9 +56,9 @@
   </modules>
 
   <scm>
-    <connection>scm:git:git@github.com:SonarSource/sonar-ant-task.git</connection>
-    <developerConnection>scm:git:git@github.com:SonarSource/sonar-ant-task.git</developerConnection>
-    <url>https://github.com/SonarSource/sonar-ant-task</url>
+    <connection>scm:git:git@github.com:SonarSource/sonar-scanner-ant.git</connection>
+    <developerConnection>scm:git:git@github.com:SonarSource/sonar-scanner-ant.git</developerConnection>
+    <url>https://github.com/SonarSource/sonar-scanner-ant</url>
     <tag>HEAD</tag>
   </scm>
   <issueManagement>
@@ -67,7 +67,7 @@
   </issueManagement>
 
   <properties>
-    <gitRepositoryName>sonar-ant-task</gitRepositoryName>
+    <gitRepositoryName>sonar-scanner-ant</gitRepositoryName>
   </properties>
 
   <profiles>
